--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-    "name": "astina",
-    "type": "module",
-    "version": "0.1.0",
-    "scripts": {
-        "dev": "tinacms dev -c \"astro dev\"",
-        "start": "astro dev",
-        "build": "astro check && astro build",
-        "preview": "astro preview",
-        "astro": "astro"
-    },
-    "dependencies": {
-        "@astrojs/mdx": "^4.0.8",
-        "@astrojs/rss": "^4.0.11",
-        "@astrojs/sitemap": "^3.2.1",
-        "@fontsource-variable/inter": "^5.1.1",
-        "@fontsource-variable/newsreader": "^5.1.1",
-        "@fontsource-variable/playfair-display": "^5.1.1",
-        "@fontsource-variable/sora": "^5.1.1",
-        "@tailwindcss/vite": "^4.0.3",
-        "astro": "^5.2.5",
-        "tailwindcss": "^4.0.3",
-        "tinacms": "^2.6.2"
-    },
-    "devDependencies": {
-        "@tailwindcss/typography": "^0.5.16",
-        "@tinacms/cli": "^1.8.2",
-        "@types/node": "^22.13.1",
-        "prettier": "^3.4.2",
-        "prettier-plugin-tailwindcss": "^0.6.11"
-    }
+  "name": "astina",
+  "type": "module",
+  "version": "0.1.0",
+  "scripts": {
+    "dev": "tinacms dev -c \"astro dev\"",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/mdx": "^4.0.8",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.2.1",
+    "@fontsource-variable/inter": "^5.1.1",
+    "@tailwindcss/vite": "^4.0.5",
+    "astro": "^5.2.5",
+    "tailwindcss": "^4.0.5",
+    "tinacms": "^2.6.3",
+    "sharp": "^0.33.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "@tinacms/cli": "^1.8.3",
+    "@types/node": "^22.13.1",
+    "prettier": "^3.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.11"
+  }
 }
