--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@fontsource-variable/inter": "^5.1.1",
     "@tailwindcss/vite": "^4.0.5",
     "astro": "^5.2.5",
+    "sharp": "^0.33.5",
     "tailwindcss": "^4.0.5",
-    "tinacms": "^2.6.3",
-    "sharp": "^0.33.2"
+    "tinacms": "^2.6.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
