--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@fontsource-variable/inter": "^5.1.1",
-    "@tailwindcss/vite": "^4.0.6",
-    "astro": "^5.2.6",
-    "motion": "^12.4.2",
+    "@tailwindcss/vite": "^4.0.7",
+    "astro": "^5.3.0",
+    "embla-carousel": "^8.5.2",
+    "motion": "^12.4.4",
     "sharp": "^0.33.5",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.7",
     "tinacms": "^2.6.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@tinacms/cli": "^1.8.3",
-    "@types/node": "^22.13.2",
-    "prettier": "^3.5.0",
+    "@types/node": "^22.13.4",
+    "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
