--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "tinacms build && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -14,18 +14,18 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@fontsource-variable/inter": "^5.1.1",
-    "@tailwindcss/vite": "^4.0.7",
+    "@tailwindcss/vite": "^4.0.8",
     "astro": "^5.3.0",
     "embla-carousel": "^8.5.2",
     "motion": "^12.4.7",
     "sharp": "^0.33.5",
-    "tailwindcss": "^4.0.7",
+    "tailwindcss": "^4.0.8",
     "tinacms": "^2.7.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@tinacms/cli": "^1.9.0",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.13.5",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11"
   }
