--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tinacms/cli": "^1.9.0",
     "@types/node": "^22.13.5",
     "prettier": "^3.5.2",
+    "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
